--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -1,47 +1,65 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="manifest" href="/manifest.json" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Primary Meta Tags -->
-    <title>Admitly - Get Admitted, Confidently | Nigeria Student Data Services</title>
-    <meta name="title" content="Admitly - Get Admitted, Confidently | Nigeria Student Data Services" />
-    <meta name="description" content="Nigeria's most trusted platform for educational decision-making. Find, compare, and apply to universities, polytechnics, and colleges across Nigeria." />
-    <meta name="keywords" content="Nigerian universities, polytechnics, admission, JAMB, UTME, tertiary education, scholarships, student guide" />
-    <meta name="author" content="Admitly" />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://admitly.com.ng/" />
-    <meta property="og:title" content="Admitly - Get Admitted, Confidently" />
-    <meta property="og:description" content="Nigeria's most trusted platform for educational decision-making. Find, compare, and apply to universities, polytechnics, and colleges." />
-    <meta property="og:image" content="https://admitly.com.ng/og-image.png" />
+  <!-- Primary Meta Tags -->
+  <title>Admitly - Get Admitted, Confidently | Nigeria Student Data Services</title>
+  <meta name="title" content="Admitly - Get Admitted, Confidently | Nigeria Student Data Services" />
+  <meta name="description"
+    content="Nigeria's most trusted platform for educational decision-making. Find, compare, and apply to universities, polytechnics, and colleges across Nigeria." />
+  <meta name="keywords"
+    content="Nigerian universities, polytechnics, admission, JAMB, UTME, tertiary education, scholarships, student guide" />
+  <meta name="author" content="Admitly" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://admitly.com.ng/" />
-    <meta property="twitter:title" content="Admitly - Get Admitted, Confidently" />
-    <meta property="twitter:description" content="Nigeria's most trusted platform for educational decision-making. Find, compare, and apply to universities, polytechnics, and colleges." />
-    <meta property="twitter:image" content="https://admitly.com.ng/og-image.png" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://admitly.com.ng/" />
+  <meta property="og:title" content="Admitly - Get Admitted, Confidently" />
+  <meta property="og:description"
+    content="Nigeria's most trusted platform for educational decision-making. Find, compare, and apply to universities, polytechnics, and colleges." />
+  <meta property="og:image" content="https://admitly.com.ng/og-image.png" />
 
-    <!-- Theme Color -->
-    <meta name="theme-color" content="#2563EB" />
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://admitly.com.ng/" />
+  <meta property="twitter:title" content="Admitly - Get Admitted, Confidently" />
+  <meta property="twitter:description"
+    content="Nigeria's most trusted platform for educational decision-making. Find, compare, and apply to universities, polytechnics, and colleges." />
+  <meta property="twitter:image" content="https://admitly.com.ng/og-image.png" />
 
-    <!-- PWA Meta Tags -->
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="Admitly" />
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#2563EB" />
 
-    <!-- Preconnect to external domains for performance -->
-    <link rel="preconnect" href="https://jvmmexjbnolzukhdhwds.supabase.co" />
-    <link rel="dns-prefetch" href="https://jvmmexjbnolzukhdhwds.supabase.co" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- PWA Meta Tags -->
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="Admitly" />
+
+  <!-- Preconnect to external domains for performance -->
+  <link rel="preconnect" href="https://jvmmexjbnolzukhdhwds.supabase.co" />
+  <link rel="dns-prefetch" href="https://jvmmexjbnolzukhdhwds.supabase.co" />
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@400;500;600;700;800&display=swap"
+    rel="stylesheet" />
+
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2363072164008960"
+    crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
